# Norvexum

./: .env.example  .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  audit.toml
.github/workflows/: ci.yml
src/: main.rs
src/agent/: checkpoint.rs  compaction.rs  history.rs  mod.rs  session.rs  vision.rs
src/ai/: anthropic.rs  gemini.rs  image_gen.rs  mod.rs  ollama.rs  openai_compat.rs  types.rs
src/commands/: chat.rs  config.rs  init.rs  mod.rs
src/config/: mod.rs  providers.rs
src/skills/: mod.rs
src/skills/backend/: SKILL.md
src/skills/debugging/: SKILL.md
src/skills/documentation/: SKILL.md
src/skills/frontend/: SKILL.md
src/skills/presentation/: SKILL.md
src/skills/selfknowlade/: SKILL.md
src/skills/selfknowladge/: SKILL.md
src/skills/tavily_skills/: SKILL.md
src/skills/testing/: SKILL.md
src/tools/: batch_image_inspect.rs  browser.rs  filesystem.rs  git.rs  image_download.rs  image_gen.rs  image_inspect.rs  image_search.rs  mod.rs  package_safety.rs  shell.rs  skills.rs  web_fetch.rs  web_search.rs
src/ui/: animations.rs  chat.rs  mod.rs  theme.rs
