[package]
name = "norvexum"
version = "0.1.0"
edition = "2024"
authors = ["Norvexum Contributors"]
description = "Advanced multi-threaded agentic CLI with rich TUI, multi-provider AI, and tool calling"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "norvexum"
path = "src/main.rs"

[dependencies]
# ── Async Runtime ──────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# ── CLI Parsing ────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive", "env", "color"] }

# ── Terminal UI ────────────────────────────────────────────────────────────
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
arboard = "3"

# ── HTTP Client (anti-bot: impersonate browser TLS fingerprint) ────────────
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "json", "cookies", "gzip", "brotli", "deflate",
    "stream", "multipart",
] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# ── Serialization ──────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
shlex = "1.3"

# ── Config & Environment ──────────────────────────────────────────────────
dotenvy = "0.15"

# ── File Operations ───────────────────────────────────────────────────────
walkdir = "2"
globset = "0.4"
similar = "2"                    # Diff/patch for file edits

# ── HTML / Content Extraction ─────────────────────────────────────────────
scraper = "0.22"
html2text = "0.14"
url = "2"
urlencoding = "2.1"


# ── Regex ──────────────────────────────────────────────────────────────────
regex = "1"

# ── Encoding ──────────────────────────────────────────────────────────────
base64 = "0.22"

# ── Identifiers & Time ────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# ── Randomness (for anti-bot delays, UA rotation) ─────────────────────────
rand = "0.9"

# ── Hashing (for cache keys, file dedup) ──────────────────────────────────
sha2 = "0.10"

# ── Error Handling & Logging ──────────────────────────────────────────────
color-eyre = "0.6"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Terminal styling (for non-TUI output) ─────────────────────────────────
console = "0.15"
indicatif = "0.17"               # Progress bars

# ── Directories ───────────────────────────────────────────────────────────
dirs = "6"                       # Platform-specific dirs (~/.norvexum)

# ── String distance (for Ollama model matching) ───────────────────────
strsim = "0.11"
image = "0.25"


[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
